# classroom-conversation

./: .gitignore  .pre-commit-config.yaml  README.md  backend-dev-template.env  backend-prod-template.env  docker-compose.amucloud.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .bandit  .flake8  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/classroomconversation/: manage.py
backend/classroomconversation/classroomconversation/: settings.py  urls.py
backend/classroomconversation/conversation/: admin.py  const.py  conversation_models.py  forms.py  helpers.py  models.py  parser.py  serializers.py  urls.py  validation.py  views.py
backend/classroomconversation/conversation/migrations/: 0003_illustration.py  0004_completedconversation.py  0005_alter_completedconversation_conversation.py  0006_alter_illustration_name.py
backend/classroomconversation/locale/nb/LC_MESSAGES/: django.mo  django.po
backend/classroomconversation/locale/nn/LC_MESSAGES/: django.mo  django.po
backend/classroomconversation/locale/no/LC_MESSAGES/: django.po
backend/classroomconversation/templates/: base.html  conversation_list.html  illustration_list.html  metrics_overview.html  metrics_view.html
docs/: example_graph.graphml  user_guide.md
frontend/: .prettierrc.js  Dockerfile  craco.config.js  jest.config.base.js  jest.config.js  package.json
frontend/src/: App.tsx  const.ts  helpers.ts  hooks.tsx  types.ts
nginx/: Dockerfile  nginx.conf
nginx/config/: proxy.conf  websocket.conf
nginx/sites-available/: dev.conf  prod.conf  (+1 more)
(+19 files in other folders)
